src/app.css
body {
  padding: 0;
  margin: 0;
  background-color: rgb(31, 31, 31);
  font-family: monospace;
}

#output {
  --parenthesis: rgb(0, 105, 243);
  --access-modifier: rgb(0, 122, 216);
  --variable-declaration-const: rgb(79, 193, 255);
  --variable-declaration-let: rgb(156, 220, 254);
  --function: rgb(220, 220, 138);
  --primitive-type: rgb(77, 201, 176);
  --conditional-statement: rgb(197, 134, 160);
  --jump-statement: rgb(189, 87, 129);
  --comment: rgb(106, 153, 81);
  --lambda-expression: rgb(0, 89, 206);
  margin-left: 1rem;
  margin-right: 1rem;
  svg {
    margin-top: 5rem;
    max-height: calc(100vh - 10rem);
    width: 100%;
  }
}

nav {
  text-align: center;
  ul {
    list-style: none;
    li {
      a {
        margin: 1rem;
        font-size: 1.5rem;
        text-decoration: none;
        color: white;

        text-decoration: underline;
        text-decoration-color: red;
        text-decoration-thickness: 0.3rem;

        transition: all 0.2s ease-in-out;
      }
      a:hover {
        font-size: 1.8rem;
      }
    }
  }
}

